samples/_failures_safe/1761213300_8da64a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_805c2365.c: In function ‘main’:
./samples/SAFE/__tmp_805c2365.c:133:5: error: expected identifier or ‘(’ at end of input
  133 |     int
      |     ^~~
./samples/SAFE/__tmp_805c2365.c:133:5: error: expected declaration or statement at end of input
